2009-12-10  Daniel Franke  <franke.daniel@gmail.com>

PR fortran/41369
	* parse.c (match_deferred_characteristics): Removed check for empty
	types in function return values.

2009-12-10  Daniel Franke  <franke.daniel@gmail.com>

	PR fortran/41369
	* gfortran.dg/func_derived_5.f90: New.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@155141 138bc75d-0d04-0410-961f-82ee72b054a4