gcc/testsuite/gfortran.dg/func_derived_5.f90
@@ -1,0 +1,14 @@
+! { dg-do "compile" }
+! PR fortran/41369 - rejected empty type in function return values
+
+module m
+ type t
+ end type t
+end module
+
+type(t) function foo()
+  use m
+  foo = t()
+end function foo
+
+! { dg-final { cleanup-modules "m" } }
